<resources>
    <string name="app_name">254 Directory</string>
    <string name="ed_username">Username</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="button_login">Login</string>
    <string name="tv_new_user">New user? Create account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="tvHeadeCreateAccount">Create account</string>
    <string name="button_create_acc">Create</string>
    <string name="button_cancel">Cancel</string>
    <string name="login_link">Already registered?Login here</string>
    <string name="tv_hearder_publish">Add business</string>
    <string name="tv_biz_name">Business name</string>

    <string name="PhoneNumber">Phone number</string>
    <string name="contact_person">Contact person</string>
    <string name="location">Location</string>
    <string name="button_publish_biz">Publish business</string>
    <string name="profile_page">Profile Page</string>
    <string name="email_address">Email address</string>
    <string name="tv_contact_person">Contact person</string>
    <string name="tv_location">Location</string>
    <string name="tv_business_phon">Phone number:</string>
    <string name="sure_text">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="btn_update_business">Update Business</string>
    <string name="update_page">Update Page</string>
    <string name="button_update">Update Business</string>
    <string name="tv_sign_out">Are you sure you want to sign out?</string>
    <string name="btn_sign_out_yes">YES</string>
    <string name="btn_signout_no">No</string>
    <string name="tv_about">About</string>
    <string name="tv_version">Version:Alpha beta</string>
    <string name="tv_app_name">254Directory</string>
    <string name="tv_ok_button">Ok</string>

</resources>
