<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateAccount">

    <TextView
        android:id="@+id/tvHeaderCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:paddingTop="15dp"
        android:text="@string/tvHeadeCreateAccount"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imLogo"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/logo1" />

    <android.support.design.widget.TextInputLayout
        android:paddingTop="10dp"
        android:id="@+id/ctext_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_below="@+id/imLogo">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ctext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_below="@+id/ctext_email_address">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_password"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctext_password"
        android:text="@string/button_create_acc" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ctext_password"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/button_cancel" />

    <TextView
        android:text="@string/login_link"
        android:id="@+id/tvLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <ProgressBar
        android:id="@+id/progressbar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/tvLoginLink"
        android:visibility="gone"
        />
</RelativeLayout>