<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <TextView
                android:id="@+id/tvAboutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_about"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:fontFamily="serif"
                android:paddingLeft="15dp"
                android:paddingTop="25dp"
                />
            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_app_name"
                android:layout_below="@+id/tvAboutHeader"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                />

            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_version"
                android:layout_below="@+id/tvAppName"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"

                />


            <TextView
                android:id="@+id/tvOkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvVersion"
                android:layout_marginEnd="81dp"
                android:paddingTop="25dp"
                android:text="@string/tv_ok_button"
                android:textSize="18sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="81dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>