<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/sure_text"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#263238"/>

            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAlert"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/textAlert"
                android:text="@string/yes"
                android:background="#263238"
                android:textColor="#FFFFFF"/>

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textAlert"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/textAlert"
                android:text="@string/no"
                android:background="#263238"
                android:textColor="#FFFFFF"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>