<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/tv_sign_out"
                android:textColor="#263238"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans"
                />
            <Button
                android:id="@+id/btnSignOutYES"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_out_yes"
                android:background="#263238"
                android:textColor="#FFFFFF"
                android:layout_toLeftOf="@+id/textView2"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView2"/>

            <Button
                android:id="@+id/btnSignOutNO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_signout_no"
                android:background="#263238"
                android:textColor="#FFFFFF"
                android:layout_toRightOf="@+id/textView2"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/textView2"/>
        </RelativeLayout>


    </android.support.v7.widget.CardView>



</LinearLayout>